Use the already updated and prepared site theme for the plone 4 version

--- a/src/msc.sitetheme/msc/sitetheme/browser/stylesheets/main.css
+++ b/src/msc.sitetheme/msc/sitetheme/browser/stylesheets/main.css
@@ -219,7 +219,7 @@ dt.portletHeader {
 
 /** @content **/
 
-.documentContent {
+#content {
     background: transparent;
 }
 
@@ -235,7 +235,7 @@ dt.portletHeader {
     border: none;
 }
 
-#content ul {
+#content ul.configlets {
     list-style: none;
 }
 
